Changelog
=========

v0.0.10
======

- Default value for FiscalProvile.IsVatExcluded = true.
- Default value for FiscalProvile.IsLegalEntity = true.
- Default value for Preferences.UnitOfMeasure = "N."

v0.0.9
======

Released on March 21, 2018

- Add DisplayAttribute to Company.Logo 
- Fix DisplayAttribute for FiscalProfile.IsFreelance
- Fix DisplayAttribute for Preferences.MailSettings

v0.0.8
======

Released on March 20, 2018

- Company.IsLegalEntity moved to Company.FiscalProfile
- Company.IsVatExcluded moved to Company.FiscalProfile
- Company.Vat moved to Company.FiscalProfile
- Company.REACode moved to Company.FiscalProfile
- Company.SIACode moved to Company.FiscalProfile
- Company.Logo moved to Company.Preferences
- EmailAttachment renamed to MailSettings
- EmailAttachment.MessageBody moved to MailSettings.Template.MessageBody
- EmailAttachment.Username moved to MailSettings.Template.SmptUsername
- EmailAttachment.Password moved to MailSettings.Template.SmptPassword
- Add MailSettings.Template property
- New MailTemplate class

v0.0.7.1-alpha
============

Released on 16 February, 2018

- Add Display attribute for Company class.
- Add Resources.PropertyNames resx file.

v0.0.6
======

Released on 15 February, 2018

- Braking: rename BaseModel.ETag to Etag.
- Get rid of JsonProperties in BaseModel class, except for UniqueId.

v0.0.5
======

Released on 2 February, 2018

- Add Company.FiscalProfile.VatIdentificationNumber
- Add Company.FiscalProfile.TaxIdentificationNumber
- Remove leftover JsonProperty attributes (Documents)

v0.0.4
======

Released on 31 January, 2018

- Don't rely on JsonProperty for property names (exception: eve meta fields)

v0.0.3
======

Released on 30 January, 2018

- Rename assembly from Models to Amica.Models.
- IntelliSense and documentantion support.
- Add Company.IsAdministrativeAccount property.
- Rename Predefinizioni class to Preferences
- Rename ProfiloFiscale class to FiscalProfile