@@ -6,7 +6,9 @@ v0.0.10
 
 - Default value for FiscalProvile.IsVatExcluded = true.
 - Default value for FiscalProvile.IsLegalEntity = true.
-- Default value for Preferences.UnitOfMeasure = "N."
+- Default value for Preferences.UnitOfMeasure = "N.".
+- Add tests for the above default values
+- Add NUnit3 test adapter so tests can actually run in VS.
 
 v0.0.9
 ======
